home, login and profile page

--- a/src/app/components/user/register/register.component.html
+++ b/src/app/components/user/register/register.component.html
@@ -1,3 +1,23 @@
-<p>
-  register works!
-</p>
+<div class="container-fluid jy-max-width-700">
+  <h1>Register</h1>
+  <form (ngSubmit) = "register()" #f="ngForm">
+    <input name="username" placeholder="username" type="text" class="form-control"
+           required [(ngModel)] = "username"/>
+    <input name="password1" placeholder="password" type="password" class="form-control"
+           required [(ngModel)] = "password1"/>
+    <input name="password2" placeholder="verify password" type="password" class="form-control"
+           required [(ngModel)] = "password2"/>
+    <div class="form-group">
+      <label for="role">Role</label>
+      <select class="form-control" id="role" name="role" [(ngModel)] = "userRole">
+        <option *ngFor="let r of role" [value]="r">{{r}}</option>
+      </select>
+    </div>
+    <div *ngIf="errorFlag" class="alert alert-danger">
+      {{errorMsg}}
+    </div>
+    <button class="btn btn-primary btn-block" type="submit" [disabled]="!f.valid">Register</button>
+    <a class="btn btn-danger btn-block" routerLink="/login" >Cancel</a>
+  </form>
+
+</div>
