--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,37 @@
-<p>
-  home works!
-</p>
+<nav class="navbar navbar-expand-md navbar-light fixed-top bg-light trans">
+  <a class="navbar-brand" routerLink="/">Home</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="myNavbar">
+    <ul class="navbar-nav ">
+      <li class="nav-item" [ngClass]="{'active': currentPath === '/allbook'}">
+        <a class="nav-link" routerLink="/allbook">All books</a>
+      </li>
+      <li class="nav-item" [ngClass]="{'active': currentPath === '/people'}">
+        <a class="nav-link" routerLink="/people">All people</a>
+      </li>
+    </ul>
+    <form class="form-inline mr-auto ml-auto" (submit)="searchBook()">
+      <input class="form-control mr-sm-2 mb-0" type="text" placeholder="Search book" [(ngModel)]="searchText" name="search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+
+    <ul class="navbar-nav">
+      <li class="mr-1"><a routerLink="/register" class="nav-link"><i class="fa fa-user"></i> Register</a></li>
+      <li><a routerLink="/profile" class="nav-link"><i class="fa fa-sign-in"></i>  Login</a></li>
+    </ul>
+  </div>
+</nav>
+
+<div class="jumbotron jumbotron-fluid bg-img" *ngIf="currentPath === '/'">
+  <div class="container text-center">
+    <h1 class="text-center text-white mt-4">Write and read books</h1>
+  </div>
+</div>
+
+
+<div class="jy-below-nav">
+  <router-outlet></router-outlet>
+</div>
