--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -1,3 +1,83 @@
-<p>
-  profile works!
-</p>
+<div class="container-fluid">
+
+  <div class="row">
+    <div class="col">
+      <h3>{{user.firstName + ' ' + user.lastName}}</h3>
+      <h5>{{'Role: ' + user.role}}</h5>
+
+      <ul class="nav nav-tabs" id="myTab" role="tablist">
+        <li class="nav-item">
+          <a class="nav-link active" id="about-tab" data-toggle="tab" href="#about">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="book-tab" data-toggle="tab" href="#myBook">My books</a>
+        </li>
+        <li class="nav-item">
+          <a  class="nav-link" id="comment-tab" data-toggle="tab" href="#myComment">My comments</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="book-like-tab" data-toggle="tab" href="#likedBook">Liked books</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" id="following-tab" data-toggle="tab" href="#following">Following</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="follower-tab" data-toggle="tab" href="#follower">Followers</a>
+        </li>
+      </ul>
+
+      <div class="tab-content" id="myTabContent">
+
+        <div class="tab-pane fade show active" id="about">
+          <form class="jy-max-width-700 mx-auto" *ngIf="user">
+            <div class="form-group">
+              <label for="firstName">First Name:</label>
+              <input type="text" class="form-control" name="firstName" id="firstName" [(ngModel)] = "user.firstName">
+            </div>
+            <div class="form-group">
+              <label for="lastName">Last Name:</label>
+              <input type="text" class="form-control" name="lastName" id="lastName" [(ngModel)] = "user.lastName">
+            </div>
+            <div class="form-group">
+              <label for="email">Email address:</label>
+              <input type="email" class="form-control" name="email" id="email" [(ngModel)] = "user.email">
+            </div>
+            <div class="form-group">
+              <label for="phone">Phone number:</label>
+              <input type="number" class="form-control" name="phone" id="phone" [(ngModel)] = "user.phone">
+            </div>
+            <div class="form-group">
+              <label for="role">Role</label>
+              <select class="form-control" id="role" name="role" [(ngModel)] = "user.role">
+                <option *ngFor="let r of role" [value]="r">{{r}}</option>
+              </select>
+            </div>
+            <div *ngIf="updateMessageFlag" class="alert alert-success" role="alert">
+              {{updateMessage}}
+            </div>
+            <button (click)="updateUser()" class="btn btn-primary btn-block">Save</button>
+            <button (click)="logOut()" class="btn btn-danger btn-block">Log out</button>
+          </form>
+        </div>
+
+        <div class="tab-pane fade" id="myBook">
+          <p>My book</p>
+        </div>
+        <div class="tab-pane fade" id="myComment">
+          <p>My comment</p>
+        </div>
+        <div class="tab-pane fade" id="likedBook">
+          <p>Liked book</p>
+        </div>
+        <div class="tab-pane fade" id="following">
+          <p>Following</p>
+        </div>
+        <div class="tab-pane fade" id="follower">
+          <p>Followers</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
