--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -62,7 +62,21 @@
         </div>
 
         <div class="tab-pane fade" id="myBook">
-          <p>My book</p>
+          <button class="btn btn-primary btn-block my-2 mx-auto jy-max-width-700" data-toggle="modal" data-target="#newBookModel">Create book</button>
+          <div class="row">
+            <div class="col-12 col-sm-6 col-lg-4 mb-4 jy-book" *ngFor="let book of books; index as i">
+              <div class="card">
+                <div class="card-body">
+                  <h4 class="card-title">{{book.title}}</h4>
+                  <h6 class="card-subtitle mb-2 text-muted">{{book.articles.length + ' Chapters'}}</h6>
+                  <p class="card-text">{{book.description}}</p>
+                </div>
+              </div>
+              <div class="book-edit">
+                <a (click)="editBook(book)"><i class="fa fa-cog"></i></a>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="tab-pane fade" id="myComment">
           <p>My comment</p>
@@ -78,6 +92,38 @@
         </div>
       </div>
 
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="newBookModel" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Create new book</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form #f="ngForm">
+          <div class="form-group">
+            <label for="nbTitle">Title:</label>
+            <input type="text" class="form-control" name="nbTitle" id="nbTitle" [(ngModel)] = "nbTitle" required>
+          </div>
+          <div class="form-group">
+            <label for="nbDescription">Description:</label>
+            <textarea rows="3" class="form-control" name="nbDescription" id="nbDescription" [(ngModel)] = "nbDescription"> </textarea>
+          </div>
+          <div *ngIf="!nbTitle" class="alert alert-danger">
+            Book title is required
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button"  class="btn btn-danger" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary btn-block" (click)="createBook()" [disabled]="!nbTitle">Create</button>
+      </div>
     </div>
   </div>
 </div>
