--- a/src/app/components/home/all-book/all-book.component.html
+++ b/src/app/components/home/all-book/all-book.component.html
@@ -1,3 +1,13 @@
-<p>
-  all-book works!
-</p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-12 col-sm-6 col-lg-4 mb-4 jy-book" *ngFor="let book of books; index as i">
+      <div class="card">
+        <div class="card-body">
+          <a routerLink="/book/{{book._id}}"><h4 class="card-title">{{book.title}}</h4></a>
+          <h6 class="card-subtitle mb-2 text-muted">{{book.articles.length + ' Chapters'}}</h6>
+          <p class="card-text">{{book.description}}</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
