--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -67,7 +67,7 @@
             <div class="col-12 col-sm-6 col-lg-4 mb-4 jy-book" *ngFor="let book of books; index as i">
               <div class="card">
                 <div class="card-body">
-                  <h4 class="card-title">{{book.title}}</h4>
+                  <a routerLink="/book/{{book._id}}"><h4 class="card-title">{{book.title}}</h4></a>
                   <h6 class="card-subtitle mb-2 text-muted">{{book.articles.length + ' Chapters'}}</h6>
                   <p class="card-text">{{book.description}}</p>
                 </div>
@@ -123,6 +123,38 @@
       <div class="modal-footer">
         <button type="button"  class="btn btn-danger" data-dismiss="modal">Close</button>
         <button type="button" class="btn btn-primary btn-block" (click)="createBook()" [disabled]="!nbTitle">Create</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="editBookModel" tabindex="-1" *ngIf="currentEditBook">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Edit book</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body" >
+        <form #eaF="ngForm">
+          <div class="form-group">
+            <label for="ebTitle">Title:</label>
+            <input type="text" class="form-control" name="ebTitle" id="ebTitle" [(ngModel)] = "currentEditBook.title" required>
+          </div>
+          <div class="form-group">
+            <label for="ebDescription">Description:</label>
+            <textarea rows="3" class="form-control" name="ebDescription" id="ebDescription" [(ngModel)] = "currentEditBook.description"> </textarea>
+          </div>
+          <div *ngIf="!currentEditBook.title" class="alert alert-danger">
+            Book title is required
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button"  class="btn btn-danger" data-dismiss="modal" (click)="deleteBook()">Delete</button>
+        <button type="button" class="btn btn-success btn-block" (click)="updateBook()" [disabled]="!currentEditBook.title">Save</button>
       </div>
     </div>
   </div>
