--- a/src/app/components/home/people/people.component.html
+++ b/src/app/components/home/people/people.component.html
@@ -1,3 +1,12 @@
-<p>
-  people works!
-</p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-12 col-sm-6 col-lg-4 mb-4 jy-book" *ngFor="let user of users">
+      <div class="card">
+        <div class="card-body">
+          <a routerLink="/user/{{user._id}}"><h4 class="card-title">{{user.firstName}}</h4></a>
+          <p class="card-text">{{'Role: ' + user.role}}</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
