--- a/src/app/components/book/book.component.html
+++ b/src/app/components/book/book.component.html
@@ -15,8 +15,9 @@
     </ng-template>
   </div>
 
-  <button class="btn btn-primary btn-block my-2 mx-auto"
+  <button class="btn btn-primary btn-block my-2 mx-auto" *ngIf="user && book && book._author._id === user._id"
           data-toggle="modal" data-target="#newArticleModel">Create new chapter</button>
+
   <li *ngFor="let article of articles" class="list-group-item">
     <div class="row">
       <div class="col-9">
@@ -25,7 +26,7 @@
         </p>
       </div>
       <div class="col-3">
-        <a (click)="editArticle(article)" class="pull-right">
+        <a (click)="editArticle(article)" class="pull-right" *ngIf="user && book && book._author._id === user._id">
           <span class="fa fa-cog"></span>
         </a>
       </div>
@@ -44,7 +45,7 @@
         </div>
       </div>
 
-      <form *ngIf="user" class="mb-4">
+      <form *ngIf="user && user.role === 'editor'" class="mb-4">
         <input class="form-control" type="text" placeholder="Comment" [(ngModel)]="bookComment" name="comment">
         <button (click)="createComment()" type="button" class="btn btn-primary btn-block">Leave a comment</button>
       </form>
